# autogame

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  DOLT_REMOTE.md  LOGBOOK.md  TASKS.md  TASKS_ARCHIVE.md  manifest
game/: .npmrc  (+8 more)
harness/: .gitignore  __init__.py  __main__.py  beads.py  cli.py  factory.yaml  git_helpers.py  lib.sh  lint.sh  node_modules  package-lock.json  package.json  pyproject.toml  qwen_vision_smoke.sh  roles.local.yaml.example  roles.py  roles.yaml  run_backlog.sh  run_subtask.sh  run_task.sh  run_ticket.sh  screenshot.js  screenshot.mjs  supervisor.py  supervisor.sh  test_game.sh  test_port_ownership.sh  test_review_recovery.sh
harness/.playtest/: playthrough.mjs  run-complete.mjs  vite.playtest.config.js
harness/.smoketest/: qa.txt  ticket.md
harness/agents/: agy.py  base.py  claude.py  cursor.py  qwen.py  spawn.py
harness/concurrency/: resource_lock.py
harness/config/: loader.py  schema.py  tunables.py
harness/dispatch/: __init__.py  dispatcher.py  factory.py  merge_queue.py  migrate.py  quota_probe.py  registry.py  ticket_render.py  triage.py  worktree_setup.py
harness/docs/: merge-thread-design.md  python-rewrite.impl-review-claude.md  python-rewrite.impl-review-gpt.md  python-rewrite.md  python-rewrite.review1-claude.md  python-rewrite.review1-gpt.md  python-rewrite.review2-claude.md  python-rewrite.review2-gpt.md  python-rewrite.review3-claude.md  python-rewrite.review3-gpt.md  python-rewrite.review4-claude.md  python-rewrite.review4-gpt.md  python-rewrite.review5-claude.md  python-rewrite.review5-gpt.md  python-rewrite.v1.md
harness/githooks/: pre-commit
harness/pipelines/: backlog.py  result.py  subtask.py  ticket.py
harness/progress/: server.mjs
harness/prompts/: acceptance.py  capture-plan.md  commit.md  decompose.md  diagnose.md  implement.md  merge_fix.md  merge_resolve.md  noise_filter.py  qa-code.md  qa.md  qwen-vision-feedback.md  renderer.py  repair.md  rescue.md  review.md  split.md
harness/scripts/: run_vitest.py  smoke-playtest.mjs
harness/steps/: append_review.py  capture_run.py  commit.py  confirm_broken.py  coverage.py  decompose.py  feedback.py  finalize.py  game.py  handoff.py  implement.py  ingest_nits.py  pipeline_checks.py  protect_review.py  qa.py  repair.py  rescue.py  revert_game.py  review.py  screenshot.py  split.py  vision_feedback.py  vitest_cleanup.py
harness/telemetry/: logging.py  progress.py  progress_server.py  usage.py
harness/tests/: conftest.py
harness/validate/: playthrough.mjs  verify-fire-artifacts.mjs  verify-hub-artifacts.mjs  verify-ice-artifacts.mjs  verify-open-plaza-artifacts.mjs  (+3 more)
(+5576 files in other folders)
